--- a/Driving-homepage/index.html
+++ b/Driving-homepage/index.html
@@ -1574,9 +1574,9 @@
   </head>
   <body>
     <!-- Top notice -->
-    <div class="topbar">
+    <div class="topbar" style="display: flex; align-items: center">
       Get Your Permit – Start Driving the World Today!
-      <span class="big-arrow">→</span>
+      <img src="top-arrow.svg" alt="" style="margin-left: 12px" />
     </div>
 
     <!-- Header -->
@@ -1589,12 +1589,12 @@
         </div>
 
         <nav class="nav-links">
-          <a href="#">Home</a>
-          <a href="#">Pricing</a>
-          <a href="#">Countries</a>
-          <a href="#">Blog</a>
-          <a href="#">Contact us</a>
-          <a href="#">About us</a>
+          <a href="../Driving-homepage/index.html">Home</a>
+          <a href="../Pricing-page/index.html">Pricing</a>
+          <a href="../Countries-page/index.html">Countries</a>
+          <a href="../Bloq-page/index.html">Blog</a>
+          <a href="../Contact-page/index.html">Contact us</a>
+          <a href="../normal-page/index.html">About us</a>
         </nav>
 
         <div class="actions">
@@ -1624,7 +1624,12 @@
               $ USD <i class="fas fa-chevron-down"></i>
             </span>
           </div>
-          <button class="btn primary">Apply Now</button>
+          <button
+            class="btn primary"
+            onclick="window.location.href='../checkout-page1/index.html'"
+          >
+            Apply Now
+          </button>
           <button class="mobile-menu-btn" onclick="toggleMobileMenu()">
             <span></span>
             <span></span>
@@ -2095,7 +2100,18 @@
               </select>
             </label>
 
-            <button class="btn start">Start Application →</button>
+            <button
+              class="btn start"
+              style="display: flex; align-items: center"
+              onclick="window.location.href='../checkout-page1/index.html'"
+            >
+              Start Application
+              <img
+                src="right-arrow.svg"
+                alt=""
+                style="width: 16px; height: 16px; margin-left: 10px"
+              />
+            </button>
           </div>
           <div class="note">
             <div class="disclaimer-icon">i</div>
