added nav links

--- a/Product-page/index.html
+++ b/Product-page/index.html
@@ -1688,14 +1688,13 @@
           </div>
 
           <nav class="nav-links">
-            <a href="#">Home</a>
-            <a href="#">Pricing</a>
-            <a href="#">Countries</a>
-            <a href="#">Blog</a>
-            <a href="#">Contact us</a>
-            <a href="#">About us</a>
+            <a href="../Driving-homepage/index.html">Home</a>
+            <a href="../Pricing-page/index.html">Pricing</a>
+            <a href="../Countries-page/index.html">Countries</a>
+            <a href="../Bloq-page/index.html">Blog</a>
+            <a href="../Contact-page/index.html">Contact us</a>
+            <a href="../normal-page/index.html">About us</a>
           </nav>
-
           <div class="actions">
             <div class="lang-currency">
               <span class="lang">
@@ -1723,7 +1722,12 @@
                 $ USD <i class="fas fa-chevron-down"></i>
               </span>
             </div>
-            <button class="btn primary">Apply Now</button>
+            <button
+              class="btn primary"
+              onclick="window.location.href='../checkout-page1/index.html'"
+            >
+              Apply Now
+            </button>
             <button class="mobile-menu-btn" onclick="toggleMobileMenu()">
               <span></span>
               <span></span>
