--- a/checkout-page2/index.html
+++ b/checkout-page2/index.html
@@ -916,6 +916,7 @@
                   border: 1px solid #dee2e6;
                   padding: 16px 20px 16px 20px;
                 "
+                onclick="window.location.href='../checkout-page1/index.html'"
               >
                 previous
               </button>
@@ -923,6 +924,7 @@
                 type="submit"
                 class="btn primary"
                 style="font-weight: 400"
+                onclick="window.location.href='../checkout-page3/index.html'"
               >
                 Next →
               </button>
