--- a/checkout-page3/index.html
+++ b/checkout-page3/index.html
@@ -1077,11 +1077,23 @@
 
             <!-- Navigation -->
             <div class="form-navigation">
-              <button type="button" class="btn secondary">previous</button>
+              <button
+                type="button"
+                class="btn secondary"
+                style="
+                  font-weight: 400;
+                  border: 1px solid #dee2e6;
+                  padding: 16px 20px 16px 20px;
+                "
+                onclick="window.location.href='../checkout-page2/index.html'"
+              >
+                previous
+              </button>
               <button
                 type="submit"
                 class="btn primary"
                 style="font-weight: 400"
+                onclick="window.location.href='../checkout-page4/index.html'"
               >
                 Next →
               </button>
