--- a/checkout-page5/index.html
+++ b/checkout-page5/index.html
@@ -1695,6 +1695,7 @@
                   border: 1px solid #dee2e6;
                   padding: 16px 20px 16px 20px;
                 "
+                onclick="window.location.href='../checkout-page4/index.html'"
               >
                 previous
               </button>
@@ -1702,6 +1703,7 @@
                 type="submit"
                 class="btn primary"
                 style="font-weight: 400"
+                onclick="window.location.href='../checkout-page6/index.html'"
               >
                 Next →
               </button>
