--- a/checkout-page7/index.html
+++ b/checkout-page7/index.html
@@ -415,9 +415,20 @@
             Your transaction has successfully been completed. Check more details
             of this transaction is your transaction history. We value you!
           </p>
-          <button href="#" class="btn primary">View order details</button>
+          <button
+            href="#"
+            class="btn primary"
+            onclick="window.location.href='../checkout-page8/index.html'"
+          >
+            View order details
+          </button>
           <br />
-          <button class="btn back-link">Back to home</button>
+          <button
+            class="btn back-link"
+            onclick="window.location.href='../Driving-homepage/index.html'"
+          >
+            Back to home
+          </button>
         </div>
       </div>
     </main>
