--- a/Bloq-page/index.html
+++ b/Bloq-page/index.html
@@ -825,6 +825,7 @@
         letter-spacing: 0px;
         vertical-align: middle;
         margin-bottom: 12px;
+        width: fit-content;
       }
 
       .blog-card h3 {
@@ -1734,12 +1735,14 @@
         </div>
 
         <nav class="nav-links">
-          <a href="#">Home</a>
-          <a href="#">Pricing</a>
-          <a href="#">Countries</a>
-          <a href="#">Blog</a>
-          <a href="#">Contact us</a>
-          <a href="#">About us</a>
+          <nav class="nav-links">
+            <a href="../Driving-homepage/index.html">Home</a>
+            <a href="../Pricing-page/index.html">Pricing</a>
+            <a href="../Countries-page/index.html">Countries</a>
+            <a href="../Bloq-page/index.html">Blog</a>
+            <a href="../Contact-page/index.html">Contact us</a>
+            <a href="../normal-page/index.html">About us</a>
+          </nav>
         </nav>
 
         <div class="actions">
@@ -1769,7 +1772,12 @@
               $ USD <i class="fas fa-chevron-down"></i>
             </span>
           </div>
-          <button class="btn primary">Apply Now</button>
+          <button
+            class="btn primary"
+            onclick="window.location.href='../checkout-page1/index.html'"
+          >
+            Apply Now
+          </button>
           <button class="mobile-menu-btn" onclick="toggleMobileMenu()">
             <span></span>
             <span></span>
@@ -1790,7 +1798,13 @@
             <a href="#">Contact us</a>
             <a href="#">My account</a>
             <div style="margin-top: 20px">
-              <button class="btn primary" style="width: 100%">Apply Now</button>
+              <button
+                class="btn primary"
+                style="width: 100%"
+                onclick="window.location.href='../checkout-page1/index.html'"
+              >
+                Apply Now
+              </button>
             </div>
           </nav>
         </div>
@@ -1940,7 +1954,12 @@
             <span class="accent-word">driving freedom</span> stays with you
           </h2>
 
-          <button class="btn btn-start">Get Started</button>
+          <button
+            class="btn btn-start"
+            onclick="window.location.href='../checkout-page1/index.html'"
+          >
+            Get Started
+          </button>
           <img class="getstarted" src="getstarted.png" alt="" />
           <img class="getstarted-invert" src="getstarted.png" alt="" />
         </div>
