--- a/Contact-page/index.html
+++ b/Contact-page/index.html
@@ -1029,7 +1029,7 @@
       .contact-us-left img {
         /* width: 100%; */
         border-radius: 8px;
-        margin: 20px 0;
+        /* margin: 20px 0; */
       }
       .maps {
         width: 100%;
@@ -1071,7 +1071,7 @@
         width: 550px;
         padding: 10px;
         border: 1px solid #f0f0f0;
-        border-radius: 6px;
+        border-radius: 8px;
         font-size: 14px;
         height: 50px;
       }
@@ -1759,12 +1759,12 @@
         </div>
 
         <nav class="nav-links">
-          <a href="#">Home</a>
-          <a href="#">Pricing</a>
-          <a href="#">Countries</a>
-          <a href="#">Blog</a>
-          <a href="#">Contact us</a>
-          <a href="#">About us</a>
+          <a href="../Driving-homepage/index.html">Home</a>
+          <a href="../Pricing-page/index.html">Pricing</a>
+          <a href="../Countries-page/index.html">Countries</a>
+          <a href="../Bloq-page/index.html">Blog</a>
+          <a href="../Contact-page/index.html">Contact us</a>
+          <a href="../normal-page/index.html">About us</a>
         </nav>
 
         <div class="actions">
@@ -1794,7 +1794,12 @@
               $ USD <i class="fas fa-chevron-down"></i>
             </span>
           </div>
-          <button class="btn primary">Apply Now</button>
+          <button
+            class="btn primary"
+            onclick="window.location.href='../checkout-page1/index.html'"
+          >
+            Apply Now
+          </button>
           <button class="mobile-menu-btn" onclick="toggleMobileMenu()">
             <span></span>
             <span></span>
@@ -1836,7 +1841,7 @@
     </section>
 
     <section class="contact-section">
-      <div class="contact-us-left">
+      <div class="contact-us-left" style="position: relative">
         <h3>Prefer a Direct Approach?</h3>
         <p>
           <img
@@ -1854,9 +1859,41 @@
         </p>
 
         <img class="maps" src="googlemaps.png" alt="" />
-        <div>
-          <h3>Our Office</h3>
-          <p>
+        <div
+          style="
+            position: absolute;
+            bottom: 29px;
+            left: 27px;
+            background-color: white;
+            padding-left: 20px;
+            border-radius: 10px;
+
+            margin-right: 27px;
+          "
+        >
+          <h3
+            style="
+              padding-left: 20px;
+              font-family: DM Sans;
+              font-weight: 600;
+              font-style: SemiBold;
+              font-size: 18px;
+              line-height: 100%;
+              letter-spacing: 0px;
+            "
+          >
+            Our Office
+          </h3>
+          <p
+            style="
+              display: flex;
+              align-items: flex-start;
+              margin-bottom: 27px;
+              margin-top: 0;
+              padding-right: 40px;
+            "
+          >
+            <img src="location.svg" alt="" />
             ECOMWEST LTD – 2 Frederick Street Kings Cross London WC1X 0ND UNITED
             KINGDOM.
           </p>
