--- a/Faq-page/index.html
+++ b/Faq-page/index.html
@@ -1148,14 +1148,13 @@
             <img src="Group 1000003602 1.png" alt="Logo" />
           </div>
         </div>
-
         <nav class="nav-links">
-          <a href="#">Home</a>
-          <a href="#">Pricing</a>
-          <a href="#">Countries</a>
-          <a href="#">Blog</a>
-          <a href="#">Contact us</a>
-          <a href="#">About us</a>
+          <a href="../Driving-homepage/index.html">Home</a>
+          <a href="../Pricing-page/index.html">Pricing</a>
+          <a href="../Countries-page/index.html">Countries</a>
+          <a href="../Bloq-page/index.html">Blog</a>
+          <a href="../Contact-page/index.html">Contact us</a>
+          <a href="../normal-page/index.html">About us</a>
         </nav>
 
         <div class="actions">
@@ -1185,7 +1184,12 @@
               $ USD <i class="fas fa-chevron-down"></i>
             </span>
           </div>
-          <button class="btn primary">Apply Now</button>
+          <button
+            class="btn primary"
+            onclick="window.location.href='../checkout-page1/index.html'"
+          >
+            Apply Now
+          </button>
           <button class="mobile-menu-btn" onclick="toggleMobileMenu()">
             <span></span>
             <span></span>
