added visa card

--- a/Driving-homepage copy/index.html
+++ b/Driving-homepage copy/index.html
@@ -2757,16 +2757,7 @@
           <div
             style="margin-top: 10px; display: flex; gap: 8px; flex-wrap: wrap"
           >
-            <img src="assets/pay-visa.png" alt="" style="height: 18px" /><img
-              src="assets/pay-mc.png"
-              alt=""
-              style="height: 18px"
-            />
-            <img src="assets/pay-amex.png" alt="" style="height: 18px" /><img
-              src="assets/pay-pp.png"
-              alt=""
-              style="height: 18px"
-            />
+            <img src="visacards.png" alt="" />
           </div>
         </div>
 
