--- a/checkout-page6/index.html
+++ b/checkout-page6/index.html
@@ -670,12 +670,6 @@
         color: #0168de;
       }
 
-      /* =========================
-   Responsive fixes & helpers
-   Paste this at the end of your stylesheet
-   ========================= */
-
-      /* Prevent any accidental horizontal scroll */
       html,
       body {
         overflow-x: hidden; /* ensure no horizontal scrollbar */
@@ -1325,9 +1319,11 @@
           padding: 28px 0;
         }
         .container {
-          padding: 0 16px;
+          padding: 0 8px;
         }
-
+        .review-section {
+          padding: 20px 10px 22px 10px;
+        }
         /* Make header compact */
         .nav {
           gap: 12px;
