--- a/checkout-page3/index.html
+++ b/checkout-page3/index.html
@@ -430,7 +430,7 @@
         width: 67px;
         height: 67px;
         border-radius: 50%;
-        background: conic-gradient(#0168de 0% 50%, #abcce6 50% 100%);
+        background: conic-gradient(#0168de 0% 100%, #abcce6 100% 100%);
         display: flex;
         align-items: center;
         justify-content: center;
@@ -1126,7 +1126,7 @@
                   border: 1px solid #dee2e6;
                   padding: 16px 20px 16px 20px;
                 "
-                onclick="window.location.href='../checkout-page2/index.html'"
+                onclick="window.location.href='../checkout-page7/index.html'"
               >
                 previous
               </button>
@@ -1134,7 +1134,7 @@
                 type="submit"
                 class="btn primary"
                 style="font-weight: 400"
-                onclick="window.location.href='../checkout-page4/index.html'"
+                onclick="window.location.href='../checkout-page5/index.html'"
               >
                 Next →
               </button>
@@ -1143,17 +1143,17 @@
 
           <!-- Right Sidebar -->
           <div class="sidebar">
-            <!-- Updated progress to show 2 of 4 -->
+            <!-- Progress Card -->
             <div class="progress-card">
               <div class="progress-ring">
-                <div class="progress-inner">2 of 4</div>
+                <div class="progress-inner">3 of 3</div>
               </div>
 
               <div class="progress-text">
-                <div class="progress-title">Upload photos</div>
+                <div class="progress-title">General details</div>
                 <div class="progress-subtitle">
-                  Photo should resemble a license or passport photo with your
-                  head straight.
+                  Please provide details exactly as they are shown on your
+                  driver's license.
                 </div>
               </div>
             </div>
@@ -1168,19 +1168,19 @@
 
               <ul class="benefits-list">
                 <li>
-                  <img class="tick" src="li mark.svg" alt="" />
+                  <div class="check-icon">✓</div>
                   Instant Approval
                 </li>
                 <li>
-                  <img class="tick" src="li mark.svg" alt="" />
+                  <div class="check-icon">✓</div>
                   Valid for 1-3 Years
                 </li>
                 <li>
-                  <img class="tick" src="li mark.svg" alt="" />
+                  <div class="check-icon">✓</div>
                   Full Refund Guarantee
                 </li>
                 <li>
-                  <img class="tick" src="li mark.svg" alt="" />
+                  <div class="check-icon">✓</div>
                   Recognized in 150+ Countries
                 </li>
               </ul>
