--- a/checkout-page7/index.html
+++ b/checkout-page7/index.html
@@ -201,6 +201,9 @@
         text-align: center;
         margin: 0 auto;
       }
+      .success-container img {
+        margin: 0 auto;
+      }
 
       .success-title {
         font-family: Matter, sans-serif;
@@ -214,7 +217,7 @@
         font-weight: 400;
         font-size: 16px;
         color: #636363;
-        margin: 0 0 40px 0;
+        margin: 0 0 30px 0;
         max-width: 480px;
         margin-left: auto;
         margin-right: auto;
@@ -452,6 +455,7 @@
     <main class="main-content">
       <div class="container">
         <div class="success-container">
+          <img src="success 1.svg" alt="" />
           <h1 class="success-title">Payment Successful</h1>
           <p class="success-message">
             Your transaction has successfully been completed. Check more details
@@ -460,16 +464,9 @@
           <button
             href="#"
             class="btn primary"
-            onclick="window.location.href='../checkout-page8/index.html'"
+            onclick="window.location.href='../checkout-page3/index.html'"
           >
-            View order details
-          </button>
-          <br />
-          <button
-            class="btn back-link"
-            onclick="window.location.href='../Driving-homepage/index.html'"
-          >
-            Back to home
+            Continue to upload your documents
           </button>
         </div>
       </div>
