--- a/Driving-homepage/index.html
+++ b/Driving-homepage/index.html
@@ -495,10 +495,6 @@
         transition: background 0.3s;
       }
 
-      .blue-button:hover {
-        background-color: #0056b3;
-      }
-
       /* ====== Feature Block ====== */
       .feature-block {
         padding-top: 72px;
@@ -1656,7 +1652,7 @@
           <a href="../Countries-page/index.html">Countries</a>
           <a href="../Bloq-page/index.html">Blog</a>
           <a href="../Contact-page/index.html">Contact us</a>
-          <a href="../normal-page/index.html">About us</a>
+          <a href="../aboutus-page/index.html">About us</a>
         </nav>
 
         <div class="actions">
@@ -1705,12 +1701,12 @@
             &times;
           </button>
           <nav>
-            <a href="#">Home</a>
-            <a href="#">Pricing</a>
-            <a href="#">Countries</a>
-            <a href="#">Blog</a>
-            <a href="#">Contact us</a>
-            <a href="#">My account</a>
+            <a href="../Driving-homepage/index.html">Home</a>
+            <a href="../Pricing-page/index.html">Pricing</a>
+            <a href="../Countries-page/index.html">Countries</a>
+            <a href="../Bloq-page/index.html">Blog</a>
+            <a href="../Contact-page/index.html">Contact us</a>
+            <a href="../aboutus-page/index.html">About us</a>
             <div style="margin-top: 20px">
               <button class="btn primary" style="width: 100%">Apply Now</button>
             </div>
