--- a/checkout-page6/index.html
+++ b/checkout-page6/index.html
@@ -463,7 +463,7 @@
         width: 67px;
         height: 67px;
         border-radius: 50%;
-        background: conic-gradient(#0168de 0% 75%, #abcce6 75% 100%);
+        background: conic-gradient(#0168de 0% 66%, #abcce6 66% 100%);
         display: flex;
         align-items: center;
         justify-content: center;
@@ -1590,7 +1590,7 @@
                     letter-spacing: 0%;
                   "
                 >
-                  Payment
+                  Checkout
                 </h3>
               </div>
 
@@ -1752,7 +1752,7 @@
                   border: 1px solid #dee2e6;
                   padding: 16px 20px 16px 20px;
                 "
-                onclick="window.location.href='../checkout-page5/index.html'"
+                onclick="window.location.href='../checkout-page2/index.html'"
               >
                 previous
               </button>
@@ -1769,61 +1769,106 @@
 
           <!-- Right Sidebar -->
           <div class="sidebar">
-            <!-- Updated progress to show 4 of 4 and changed title -->
+            <!-- Updated progress to show 3 of 4 -->
             <div class="progress-card">
-              <div
-                class="progress-ring"
-                style="
-                  background: conic-gradient(
-                    #0168de 0% 100%,
-                    #abcce6 100% 100%
-                  );
-                "
-              >
-                <div class="progress-inner">4 of 4</div>
+              <div class="progress-ring">
+                <div class="progress-inner">2 of 3</div>
               </div>
 
               <div class="progress-text">
-                <div class="progress-title">Driver's details</div>
+                <div class="progress-title">Checkout</div>
                 <div class="progress-subtitle">
-                  Please provide details exactly as they are shown on your
-                  driver's license
+                  choose your payment method, and complete your purchase
+                  securely
                 </div>
               </div>
             </div>
-            <!-- Info Card -->
-            <div class="info-card">
+
+            <div
+              style="
+                display: flex;
+                border: 0.8px solid #dee2e6;
+                border-radius: 20px;
+              "
+            >
               <img
-                class="imagegirl"
-                src="checkout 1 image.svg"
-                alt="Woman with IDP"
+                src="info.svg"
+                alt=""
+                style="
+                  display: inline;
+                  padding-bottom: 15px;
+                  padding-left: 20px;
+                "
+              />
+              <p class="right-text">
+                Please choose your plan wisely as certain countries do not
+                accept digitalonly options
+              </p>
+            </div>
+            <div
+              style="
+                display: flex;
+                border: 0.8px solid #dee2e6;
+                border-radius: 20px;
+              "
+            >
+              <img
+                src="info.svg"
+                alt=""
+                style="
+                  display: inline;
+                  padding-bottom: 15px;
+                  padding-left: 20px;
+                "
               />
 
-              <ul class="benefits-list">
-                <li>
-                  <img class="tick" src="li mark.svg" alt="" />
-                  Instant Approval
-                </li>
-                <li>
-                  <img class="tick" src="li mark.svg" alt="" />
-                  Valid for 1-3 Years
-                </li>
-                <li>
-                  <img class="tick" src="li mark.svg" alt="" />
-                  Full Refund Guarantee
-                </li>
-                <li>
-                  <img class="tick" src="li mark.svg" alt="" />
-                  Recognized in 150+ Countries
-                </li>
-              </ul>
+              <p class="right-text">
+                If you've opted for a printed IDP, ensure accurate shipping
+                information to avoid any loss during deliverys
+              </p>
             </div>
-            <!-- Support Section -->
-            <div class="support-section">
-              <h3>Do you need assistance?</h3>
-              <div class="support-buttons">
-                <button class="btn primary">Live chat</button>
-                <button class="btn secondary-outline">Email</button>
+
+            <!-- Added order summary -->
+            <div class="order-summary">
+              <div class="summary-row total">
+                <span class="summary-label">Total Amount</span>
+                <span class="summary-value" style="padding: 0">$107</span>
+              </div>
+
+              <div class="summary-row">
+                <div>
+                  <div class="summary-label">IDP: Print + Digital bundle</div>
+                  <div class="summary-subtitle">Valid for 3 years</div>
+                </div>
+                <span class="summary-value">$79</span>
+              </div>
+
+              <div class="summary-row">
+                <div>
+                  <div class="summary-label">Delivery fee</div>
+                  <div class="summary-subtitle">
+                    Standard Postal Mail, 20-40 working days
+                  </div>
+                </div>
+                <span class="summary-value">$9</span>
+              </div>
+
+              <div class="summary-row">
+                <span class="summary-label">Express order</span>
+                <span class="summary-value">$19</span>
+              </div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: row;
+                  align-items: center;
+                  justify-content: center;
+                "
+              >
+                <button class="coupon-btn">
+                  <img src="addcoupon.svg" alt="" style="margin-right: 10px" />
+                  Add Coupon
+                </button>
               </div>
             </div>
           </div>
